version/0.3/_sources/api/ansys/geometry/core/plotting/widgets/button/Button.rst.txt




Button
======

.. py:class:: Button(plotter: pyvista.Plotter, button_config: tuple)
   :canonical: ansys.geometry.core.plotting.widgets.button.Button



Bases: :py:obj:`ansys.geometry.core.plotting.widgets.widget.PlotterWidget`

Provides the abstract class for implementing buttons in PyAnsys Geometry.














Overview
--------
.. py:currentmodule:: Button
.. tab-set::

    .. tab-item:: Abstract methods

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~callback`
            - Get the functionality of the button, which is implemented by subclasses.



    .. tab-item:: Methods

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~update`
            - Assign the image that represents the button.







Import detail
-------------

.. code-block:: python

    from ansys.geometry.core.plotting.widgets.button import Button




Method detail
-------------


.. py:method:: callback(state: bool) -> None
   :abstractmethod:

   
   Get the functionality of the button, which is implemented by subclasses.


   :Parameters:

       **state** : :ref:`bool <python:bltin-boolean-values>`
           Whether the button is active.














   ..
       !! processed by numpydoc !!



.. py:method:: update() -> None

   
   Assign the image that represents the button.
















   ..
       !! processed by numpydoc !!


